--- a/en/index.html
+++ b/en/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="og:image" content="/Festival_Drone_header.jpg">
-    <title>Drone Fan Quebec 2025 Festival - Saint-Georges</title>
+    <title>Drone Fan Quebec 2026 Festival - Saint-Georges</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
         * {
@@ -617,13 +617,15 @@
     <section class="hero">
       <div class="container">
         <div class="hero-content">
-          <h1>Drone Fan Québec 2025 Festival</h1>
+          <h1>Drone Fan Québec 2026 Festival</h1>
+          <!--
           <p class="hero-subtitle"
              style="background-color: rgba(0,0,0,0.7); border-radius: 10px; margin-top: 5rem; margin-bottom: 5rem">
             The event will take place despite the rain. We look forward to seeing you in large numbers!
             <br>
-            <span style="font-size: 0.75em">(updated on August 30)</span>
+            <span style="font-size: 0.75em">(updated on August 29)</span>
           </p>
+          -->
           <p class="hero-subtitle">
             <img src="/Flag_of_Quebec.png" style="height: 1em" alt="QC">
             First Quebec event dedicated exclusively to the world of drones
@@ -634,7 +636,7 @@
             <div class="detail-card">
               <i class="fas fa-calendar-alt"></i>
               <h3>Date</h3>
-              <p>August 30, 2025<br>10:00 AM - 4:30 PM</p>
+              <p>August 29, 2026<br>10:00 AM - 4:30 PM</p>
             </div>
             <div class="detail-card">
               <i class="fas fa-map-marker-alt"></i>
@@ -644,7 +646,7 @@
             <div class="detail-card">
               <i class="fas fa-ticket-alt"></i>
               <h3>Tickets</h3>
-              <p>16.50$<br><small>Children under 12: Free*</small></p>
+              <p>20.00$<br><small>Children under 12: Free*</small></p>
             </div>
             <div class="detail-card">
               <i class="fas fa-car"></i>
@@ -654,19 +656,23 @@
           </div>
 
           <div class="cta-buttons">
+            <!--
             <a href="https://app.hi.events/event/839/festival-drone-fan-quebec" class="btn btn-primary">
               <i class="fas fa-shopping-cart"></i>
               Buy tickets
             </a>
+            -->
             <a href="/Stationnements%20PDF.pdf" target="_blank" class="btn btn-secondary">
               <i class="fas fa-map"></i>
               Parking Map (PDF)
             </a>
+            <!--
             <a href="/Horaire%20de%20la%20journée%20Festival%20Drone%20Fan%20Québec.pdf" target="_blank"
                class="btn btn-secondary">
               <i class="fas fa-clock"></i>
               Schedule (PDF)
             </a>
+            -->
           </div>
         </div>
       </div>
@@ -680,7 +686,7 @@
           <div class="program-grid">
             <div class="program-card">
               <h3><i class="fas fa-racing-flag"></i> FPV Drone Race</h3>
-              <p>FPV Drone Race under a giant tent directed by Mr. Ryan Walker</p>
+              <p>FPV Drone Race on a new track. Directed by Mr. Ryan Walker</p>
               <a href="#fpv-race" class="video-link" target="_blank">
                 <i class="fab fa-youtube"></i> Watch the video
               </a>
@@ -698,12 +704,14 @@
 
             <div class="program-card">
               <h3><i class="fas fa-shield-alt"></i> Emergency Services</h3>
+              <!--
               <p>Firefighters and police will explain how drones help them in their work</p>
+              -->
             </div>
 
             <div class="program-card">
               <h3><i class="fas fa-microphone"></i> Conferences</h3>
-              <p>Conferences on drones, safety, regulation, and optimal use led by Mr. Hugues Drouin (Aérofête de Beauce air festival)</p>
+              <p>Conferences on drones, safety, regulation, and optimal use</p>
             </div>
 
             <div class="program-card">
@@ -715,6 +723,12 @@
           <div style="margin-top: 3rem;">
             <h3 class="subsection-title">Drone Models on Display</h3>
             <div class="drone-models">
+              <div class="drone-model">
+                Coming Soon
+                <div class="drone-model-img"
+                     style="background-image: url('/no drone.png')"></div>
+              </div>
+              <!--
               <div class="drone-model">
                 DJI Mini Pro 4
                 <div class="drone-model-img" style="background-image: url('/DJI Mini Pro 4.png')"></div>
@@ -756,6 +770,7 @@
                 DJI Agras T50
                 <div class="drone-model-img" style="background-image: url('/DJI Agras T50.webp')"></div>
               </div>
+              -->
             </div>
           </div>
 
@@ -763,10 +778,14 @@
           <div style="margin-top: 3rem;">
             <h3 class="subsection-title">Conferences on the Program</h3>
             <div class="conferences">
+              <div class="conference" style="text-align: center">
+                <h4>Coming Soon</h4>
+              </div>
+              <!--
               <div class="conference">
                 <h4>1. How can drones and citizens coexist?</h4>
                 <ul class="conference-points">
-                  <li>New regulatory framework from Transport Canada in 2025</li>
+                  <li>New regulatory framework from Transport Canada in 2026</li>
                   <li>Insurance</li>
                   <li>Areas to avoid (airports, fires, national parks, prisons)</li>
                   <li>Citizens' rights</li>
@@ -816,8 +835,10 @@
                 </ul>
                 <i class="fas fa-video"></i>
               </div>
+              -->
             </div>
 
+            <!--
             <div class="conference-animator">
               <div class="animator-img"></div>
               <div class="animator-name">
@@ -825,9 +846,11 @@
                 <div>Mr. Hugues Drouin</div>
               </div>
             </div>
+            -->
           </div>
 
 
+          <!--
           <div style="margin-top: 3rem;">
             <div class="peek-items">
               <div class="peek-item">
@@ -864,6 +887,7 @@
               </div>
             </div>
           </div>
+          -->
         </section>
 
         <section id="public" class="section">
@@ -965,6 +989,11 @@
           <h3 style="color: var(--dfq-red); margin-bottom: 1rem;">Collaborators and Sponsors</h3>
 
           <ul class="sponsor-grid">
+            <li class="sponsor"
+                style="padding: 40px 70px; background-color: var(--dfq-red-l4); border-radius: 0.5rem; color: var(--dfq-red-l1)">
+              Coming Soon
+            </li>
+            <!--
             <li class="sponsor">
               <img src="/sponsor/saint_georges.jpg" alt="City of Saint-Georges">
             </li>
@@ -992,6 +1021,7 @@
             <li class="sponsor">
               <img src="/sponsor/lesva.png" alt="LESVA">
             </li>
+            -->
           </ul>
         </section>
       </div>
