--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="og:image" content="/Festival_Drone_header.jpg">
-    <title>Festival Drone Fan Québec 2025 - Saint-Georges</title>
+    <title>Festival Drone Fan Québec 2026 - Saint-Georges</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
         * {
@@ -617,13 +617,15 @@
     <section class="hero">
       <div class="container">
         <div class="hero-content">
-          <h1>Festival Drone Fan Québec 2025</h1>
+          <h1>Festival Drone Fan Québec 2026</h1>
+          <!--
           <p class="hero-subtitle"
              style="background-color: rgba(0,0,0,0.7); border-radius: 10px; margin-top: 5rem; margin-bottom: 5rem">
             L'événement a lieu malgré la pluie. On vous attend en grand nombre!
             <br>
             <span style="font-size: 0.75em">(mis à jour le 30 août)</span>
           </p>
+          -->
           <p class="hero-subtitle">
             <img src="/Flag_of_Quebec.png" style="height: 1em" alt="QC">
             Premier événement québécois dédié exclusivement au monde des drones
@@ -634,7 +636,7 @@
             <div class="detail-card">
               <i class="fas fa-calendar-alt"></i>
               <h3>Date</h3>
-              <p>30 août 2025<br>10h00 - 16h30</p>
+              <p>29 août 2026<br>10h00 - 16h30</p>
             </div>
             <div class="detail-card">
               <i class="fas fa-map-marker-alt"></i>
@@ -644,7 +646,7 @@
             <div class="detail-card">
               <i class="fas fa-ticket-alt"></i>
               <h3>Billets</h3>
-              <p>16.50$<br><small>Enfants - de 12 ans: Gratuit*</small></p>
+              <p>20.00$<br><small>Enfants - de 12 ans: Gratuit*</small></p>
             </div>
             <div class="detail-card">
               <i class="fas fa-car"></i>
@@ -654,19 +656,23 @@
           </div>
 
           <div class="cta-buttons">
+            <!--
             <a href="https://app.hi.events/event/839/festival-drone-fan-quebec" class="btn btn-primary">
               <i class="fas fa-shopping-cart"></i>
               Acheter des billets
             </a>
+            -->
             <a href="/Stationnements%20PDF.pdf" target="_blank" class="btn btn-secondary">
               <i class="fas fa-map"></i>
               Stationnements (PDF)
             </a>
+            <!--
             <a href="/Horaire%20de%20la%20journée%20Festival%20Drone%20Fan%20Québec.pdf" target="_blank"
                class="btn btn-secondary">
               <i class="fas fa-clock"></i>
               Horaire (PDF)
             </a>
+            -->
           </div>
         </div>
       </div>
@@ -680,7 +686,7 @@
           <div class="program-grid">
             <div class="program-card">
               <h3><i class="fas fa-racing-flag"></i> Course de drones FPV</h3>
-              <p>Course de drones FPV sous un chapiteau géant dirigée par M. Ryan Walker</p>
+              <p>Course de drones FPV sur une nouvelle piste inédite. Dirigée par M. Ryan Walker</p>
               <a href="#fpv-race" class="video-link" target="_blank">
                 <i class="fab fa-youtube"></i> Voir la vidéo
               </a>
@@ -698,12 +704,14 @@
 
             <div class="program-card">
               <h3><i class="fas fa-shield-alt"></i> Services d'urgence</h3>
+              <!--
               <p>Pompiers et policiers viendront expliquer comment les drones les aident dans leur travail</p>
+              -->
             </div>
 
             <div class="program-card">
               <h3><i class="fas fa-microphone"></i> Conférences</h3>
-              <p>Conférences sur les drones, la sécurité, la réglementation et l'utilisation optimale animées par M. Hugues Drouin (festival aérien Aérofête de Beauce)</p>
+              <p>Conférences sur les drones, la sécurité, la réglementation et l'utilisation optimale</p>
             </div>
 
             <div class="program-card">
@@ -715,6 +723,12 @@
           <div style="margin-top: 3rem;">
             <h3 class="subsection-title">Modèles de drones en démonstration</h3>
             <div class="drone-models">
+              <div class="drone-model">
+                À venir
+                <div class="drone-model-img"
+                     style="background-image: url('/no drone.png')"></div>
+              </div>
+              <!--
               <div class="drone-model">
                 DJI Mini Pro 4
                 <div class="drone-model-img" style="background-image: url('/DJI Mini Pro 4.png')"></div>
@@ -756,6 +770,7 @@
                 DJI Agras T50
                 <div class="drone-model-img" style="background-image: url('/DJI Agras T50.webp')"></div>
               </div>
+              -->
             </div>
           </div>
 
@@ -763,10 +778,14 @@
           <div style="margin-top: 3rem;">
             <h3 class="subsection-title">Conférences au programme</h3>
             <div class="conferences">
+              <div class="conference" style="text-align: center">
+                <h4>À venir</h4>
+              </div>
+              <!--
               <div class="conference">
                 <h4>1. Comment drones et citoyens peuvent-ils cohabiter?</h4>
                 <ul class="conference-points">
-                  <li>Nouveau cadre règlementaire de Transport Canada en 2025</li>
+                  <li>Nouveau cadre règlementaire de Transport Canada en 2026</li>
                   <li>Assurances</li>
                   <li>Zones à éviter (aéroports, feux, parcs nationaux, prisons)</li>
                   <li>Droits des citoyens</li>
@@ -816,8 +835,10 @@
                 </ul>
                 <i class="fas fa-video"></i>
               </div>
+              -->
             </div>
 
+            <!--
             <div class="conference-animator">
               <div class="animator-img"></div>
               <div class="animator-name">
@@ -825,9 +846,11 @@
                 <div>Monsieur Hugues Drouin</div>
               </div>
             </div>
+            -->
           </div>
 
 
+          <!--
           <div style="margin-top: 3rem;">
             <div class="peek-items">
               <div class="peek-item">
@@ -864,6 +887,7 @@
               </div>
             </div>
           </div>
+          -->
         </section>
 
         <section id="public" class="section">
@@ -965,6 +989,11 @@
           <h3 style="color: var(--dfq-red); margin-bottom: 1rem;">Collaborateurs et commanditaires</h3>
 
           <ul class="sponsor-grid">
+            <li class="sponsor"
+                style="padding: 40px 70px; background-color: var(--dfq-red-l4); border-radius: 0.5rem; color: var(--dfq-red-l1)">
+              À venir
+            </li>
+            <!--
             <li class="sponsor">
               <img src="/sponsor/saint_georges.jpg" alt="Ville de Saint-Georges">
             </li>
@@ -992,6 +1021,7 @@
             <li class="sponsor">
               <img src="/sponsor/lesva.png" alt="LESVA">
             </li>
+            -->
           </ul>
         </section>
       </div>
